styling , navbar and route

--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,5 +1,5 @@
 <div class="row card-group">
-  <div class="col-4" *ngFor="let item of eventList">
+  <div class="col-lg-4 col-md-4 col-sm-12" *ngFor="let item of eventList">
     <div class="card">
       <app-event
         [eventObj]="item"
