--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,31 @@
-<div class="form-group">
-  <button class="btn btn-success">Test</button>
-</div>
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <a class="navbar-brand" href="#">
+    <img src="../assets/images/Logo.png" alt="Logo" style="width:40px;" />
+  </a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#collapsibleNavbar"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Find Events</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Register</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<h1 >Marathon Tracker</h1>
 <app-event-list (SelectedEvent)="OnSelectedEvent($event)"></app-event-list>
 <br />
 <h5>{{ selectedEvent }}</h5>
