--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,8 +1,12 @@
-<div class="container" (click)="onClick()">
-  <h2>{{eventObj.eventName}}</h2>
-  <h4>{{ eventObj.eventDesc }}</h4>
-  <h4>{{ eventObj.eventDate }}</h4>
-  <h4>{{ eventObj.city }}</h4>
-  <h4>{{ eventObj.category }}</h4>
-  </div>
+<div class="thumbnail" (click)="onClick()">
+  <img class="float-right" [src]="eventObj.eventImageURL" alt="" />
+  <div class="caption">
+    <h2>
+      <a [routerLink]="['/events', eventObj.Id]">{{ eventObj.eventName }}</a>
+    </h2>
 
+    <h4>{{ eventObj.eventDate }}</h4>
+    <h4>{{ eventObj.city }}</h4>
+    <h4>{{ eventObj.category }}</h4>
+  </div>
+</div>
