--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  /* background-color: grey; */
+  background-image: url(./assets/images/pattern.PNG);
+  background-position: right bottom, left top;
+  background-repeat: repeat;
+}
+.body-content {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+h1 {
+  text-align: center;
+  font-family: cursive;
+}
