added call to api

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -2,7 +2,7 @@
   <img class="float-right" [src]="eventObj.eventImageURL" alt="" />
   <div class="caption">
     <h2>
-      <a [routerLink]="['/events', eventObj.Id]">{{ eventObj.eventName }}</a>
+      <a [routerLink]="['/events', eventObj.id]">{{ eventObj.eventName }}</a>
     </h2>
 
     <h4>{{ eventObj.eventDate }}</h4>
